--- a/views/splash.html
+++ b/views/splash.html
@@ -1,13 +1,16 @@
-<h2>Welcome!</h2>
+<div class="container">
+  <div class="card shadow">
+    <div class="toolbar">
+      <h2 class="toolbarTitle">Welcome!</h2>
+    </div>
+    <p>Send yourself a text! Go on try it out!</p>
 
-
-<h4>Send yourself a text! Go on try it out!</h4>
-
-<form ng-submit="sendMessage(message)">
-  <label>Enter your number</label>
-  <input required ng-model="message.to" placeholder="867-5309" type="text"/>
-
-  <label>Message Body</label>
-  <textarea required cols="30" rows="10" ng-model="message.body"></textarea>
-  <button type="submit">Send</button>
-</form>
+    <form ng-submit="sendMessage(message)">
+      <textarea placeholder="Jenny, Jenny, who can I turn to?" class="splashTextArea" required cols="30" rows="5" ng-model="message.body"></textarea>
+      <input class ="input" required ng-model="message.to" placeholder="867-5309" type="text"/>
+      <button class="btn" type="submit">Send</button>
+    </form>
+    <p>Ready to create an account?</p>
+    <button class="btn"><a class="link" href="#/login">Register/Login</a></button>
+  </div>
+</div>
