--- a/style.css
+++ b/style.css
@@ -4,14 +4,18 @@ body {
   width: 100%;
   margin: 0;
   font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-
+  -webkit-transition: all .5s ease;
+  -moz-transition: all .5s ease;
+  -ms-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
 }
 
 .header {
   height: 50px;
   padding: 10px 40px;
   box-sizing: border-box;
-  background: rgba(111, 159, 255, 1);
+  background: rgba(60, 99, 178, 1);
 }
 
 .brand {
@@ -36,7 +40,7 @@ body {
 }
 
 .loginlink:hover {
-  color: rgba(60, 99, 178, 1)
+  color: rgba(255, 143, 129, 1)
 }
 
 .loginlink:visited {
@@ -45,29 +49,62 @@ body {
 }
 
 .loginlink:visited:hover {
-  color: rgba(60, 99, 178, 1)
+  color: rgba(255, 143, 129, 1)
+}
+
+.app {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .mainView {
-  padding: 40px 60px;
+  width: 100%;
+  height: 100%;
 }
 
 .container {
+  width: 100%;
+  height: 100%;
+  padding: 40px 0px;
   display: flex;
   flex-direction: row;
   text-align: center;
   justify-content: center;
+  background: linear-gradient(rgba(154, 154, 154, .4), rgba(154, 154, 154, .4)), url(/imgs/bricks.jpg) no-repeat center center;
 }
 
 .card {
-  margin: auto;
+  margin: 0 auto;
   width: 60%;
   min-width: 430px;
-  background: rgba(60, 99, 178, .5);
+  background: rgba(60, 99, 178, .9);
   color: white;
   padding-top: 0px;
   padding-bottom: 20px;
   box-sizing: border-box;
+  -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -ms-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
+  overflow: auto;
+}
+
+.splashCard {
+  height: 370px;
+}
+
+.sentCard {
+  height: 440px;
+}
+
+.loginCard {
+  height: 250px;
+}
+
+.registerCard {
+  height: 458px;
 }
 
 .toolbarTitle {
@@ -75,17 +112,18 @@ body {
 }
 
 .toolbar {
-  height: 10%;
+  height: 26px;
   padding: 10px;
-  color: rgba(60, 99, 178, .7);
+  color: rgba(60, 99, 178, 1);
   background: white;
   margin-bottom: 10px;
+  box-sizing: border-box;
 }
 
 .shadow {
-  -moz-box-shadow: 3px 3px 5px 6px #ccc;
-  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
-  box-shadow: 3px 3px 5px 6px #ccc;
+  -moz-box-shadow: 3px 3px 5px 2px #ccc;
+  -webkit-box-shadow: 3px 3px 5px 2px #ccc;
+  box-shadow: 3px 3px 5px 2px #ccc;
 }
 
 .splashTextArea {
@@ -95,6 +133,7 @@ body {
   border: 0px;
   font-size: 1.5em;
   margin-bottom: 10px;
+  box-sizing: border-box;
   padding: 5px;
 }
 
@@ -108,7 +147,7 @@ body {
 .btn {
   padding: 10px 20px;
   font-size: 1.5em;
-  background: rgba(255,143,129,1);
+  background: rgba(255, 143, 129, 1);
   color: white;
   border: .5px solid white;
 }
@@ -120,12 +159,6 @@ body {
 
 .btn:hover {
   color: rgba(60, 99, 178, 1)
-}
-
-.loginCard {
-  width: 60%;
-  height: 40%;
-  margin: 0;
 }
 
 .link {
@@ -147,6 +180,9 @@ body {
 
 .form {
   margin-bottom: 20px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .form-container {
@@ -162,5 +198,83 @@ body {
 
 .form-row {
   text-align: right;
+}
+
+.messageRow {
+  background: rgba(60, 99, 178, .7);
+  padding: 10px;
+  box-sizing: border-box;
+  height: 460px;
+}
+
+.messageForm {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.message {
+  margin: 0;
+  min-width: 100px;
+}
+
+.msgLabel {
+  color: white;
+}
+
+.messageStream {
+  padding: 20px;
+  box-sizing: border-box;
+  float: right;
+  height: 100%;
+  width: 25%;
+  background: rgba(60, 99, 178, 1);
+}
+
+.contactContainer {
+  padding: 20px;
+  box-sizing: border-box;
+  background: rgba(60, 99, 178, 1);
+  width: 75%;
+
+}
+
+.newContact {
+  color: white;
+}
+
+.contactInput {
+  font-size: 1em;
+  background-color: rgba(117,144,200,1) !important;
+  color: white !important;
+}
+
+.contactList {
+  padding: 10px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.contactBox {
+  padding: 5px;
+  border: solid .5px white;
+  width: 30%;
+}
+
+
+@media (min-width: 876px) {
+  .messageForm {
+    flex-direction: row;
+  }
+
+  .messageRow {
+    padding: 20px;
+    height: auto;
+  }
 }
 
