--- a/style.css
+++ b/style.css
@@ -117,13 +117,18 @@ body {
   color: rgba(60, 99, 178, 1);
   background: white;
   margin-bottom: 10px;
-  box-sizing: border-box;
 }
 
 .shadow {
-  -moz-box-shadow: 3px 3px 5px 2px #ccc;
-  -webkit-box-shadow: 3px 3px 5px 2px #ccc;
-  box-shadow: 3px 3px 5px 2px #ccc;
+   -moz-box-shadow: 3px 3px 5px 2px #ccc;
+   -webkit-box-shadow: 3px 3px 5px 2px #ccc;
+   box-shadow: 3px 3px 5px 2px #ccc;
+ }
+
+.darkShadow {
+  -moz-box-shadow: 3px 3px 5px 2px #444;
+  -webkit-box-shadow: 3px 3px 5px 2px #444;
+  box-shadow: 3px 3px 5px 2px #444;
 }
 
 .splashTextArea {
@@ -201,7 +206,7 @@ body {
 }
 
 .messageRow {
-  background: rgba(60, 99, 178, .7);
+  background: rgba(117,144,200,1);
   padding: 10px;
   box-sizing: border-box;
   height: 460px;
@@ -226,12 +231,31 @@ body {
 }
 
 .messageStream {
-  padding: 20px;
+  color: white;
+  padding: 0px 20px;
   box-sizing: border-box;
-  float: right;
-  height: 100%;
   width: 25%;
   background: rgba(60, 99, 178, 1);
+  border-right: solid 1px rgba(117,144,200,1);
+}
+
+.messageHead {
+  border-bottom: solid 1px rgba(117,144,200,1);
+  padding: 12px;
+}
+
+.messageItem {
+  clear: both;
+  margin-bottom: 10px;
+}
+
+.messageBody {
+  float: left;
+}
+
+.messageDate {
+  font-size: .5em;
+  float: right;
 }
 
 .contactContainer {
@@ -239,17 +263,38 @@ body {
   box-sizing: border-box;
   background: rgba(60, 99, 178, 1);
   width: 75%;
-
 }
 
 .newContact {
   color: white;
+  position: relative;
+  border-bottom: solid 1px rgba(117,144,200,1);
+  font-size: 1em;
 }
 
 .contactInput {
   font-size: 1em;
-  background-color: rgba(117,144,200,1) !important;
+  background-color: rgba(117,144,200,.5) !important;
   color: white !important;
+  margin-bottom: 5px;
+}
+
+.editList {
+  background: rgba(117,144,200,1);
+}
+
+.edit {
+  font-size: 1em;
+}
+
+.editinput {
+  background-color: rgba(117,144,200,1);
+  color: white;
+  width: 70%;
+}
+
+.editbtn {
+  float: right;
 }
 
 .contactList {
@@ -258,14 +303,75 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .contactBox {
-  padding: 5px;
-  border: solid .5px white;
-  width: 30%;
+  padding: 5px 10px;
+  width: 150px;
+  position: relative;
+  margin: 5px;
+  background: rgba(117, 144, 200, 1);
+  color: white;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
+
+.pencil {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+
+.pencil:hover {
+  color: rgba(255, 143, 129, 1)
+}
+
+.pencil:visited:hover {
+  color: rgba(255, 143, 129, 1)
+}
+
+.menu {
+  position: absolute;
+  right: 0px;
+  top: 5px;
+  font-size: 1.5em;
+}
+
+.menu:hover {
+  color: rgba(255, 143, 129, 1)
+}
+
+.menu:visited:hover {
+  color: rgba(255, 143, 129, 1)
+}
+
+.editModal {
+  width: 60%;
+  height: 30%;
+  margin: auto;
+}
+
+.adminContainer {
+  height: 100%;
+  width: 100%;
+  background: rgba(60, 99, 178, 1);
+}
+
+.contactText {
+  display: block;
+}
+
+.bottomContent {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.contactPhone {
+}
 
 @media (min-width: 876px) {
   .messageForm {
