pushing to test hosting

--- a/views/admin.html
+++ b/views/admin.html
@@ -40,7 +40,7 @@
           <div class="contactBox darkShadow">
             <p class="contactText">{{contact.name}}
               <span class="contactText contactPhone">{{contact.phone}}</span></p>
-            <a class="pencil link" href="" ng-click="contactEdit(contact)" ng-show="editToggle"><i class="icon-pencil"></i></a>
+            <!--<a class="pencil link" href="" ng-click="contactEdit(contact)" ng-show="editToggle"><i class="icon-pencil"></i></a>-->
             <a class="pencil link" href="" ng-click="deleteContact(contact._id)" ng-hide="editToggle"><i class="icon-cancel"></i></a>
 
           </div>
